2006-04-03  Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el (pgg-gpg-process-filter)
	(pgg-gpg-wait-for-completion): Check if buffer is alive.

	* pgg-gpg.el (pgg-gpg-process-sentinel): Don't remove GNUPG:
	lines, temporary fix.

2006-03-31  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-group.el (gnus-group-update-tool-bar): Add :initialize and
	:set.

2006-03-29  Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el (pgg-gpg-start-process): Don't bind
	default-enable-multibyte-characters.  This reverts the change from
	revision 6.17 which is no longer necessary because the passphrase
	is sent separately now.  GnuPG messages are unreadable under
	multibyte locales with default-enable-multibyte-characters set to
	nil.

2006-03-28  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-tool-bar-gnome): Move "spell".

2006-03-27  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-sum.el (gnus-summary-from-or-to-or-newsgroups): Don't use
	XEmacs-only `replace-in-string'.  Use `gnus-group-real-name'
	instead.

2006-03-27  Karl Kleinpaste  <karl@charcoal.com>

	* gnus-sum.el (gnus-summary-from-or-to-or-newsgroups): Improve
	newsgroups handling for NNTP overviews which don't include
	Newsgroups.

2006-03-26  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* message.el (message-resend): Bind message-generate-hashcash to
	to nil.

2006-03-26  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* hashcash.el (hashcash-already-paid-p): Bind case-fold-search
	when searching for already-paid recipients.

2006-03-27  Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el: Invoke gpg asynchronous, to avoid querying for
	passphrases when it is not needed.
	(pgg-gpg-use-agent): Add, to hard code that pgg shouldn't wait for
	passphrase stuff from gpg, should only be necessary when you use
	gpg with a smartcard.

2006-03-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mml.el (mml-insert-mime): Ignore cached contents of
	message/external-body part.
